--- a/food_information_app_project/pubspec.yaml
+++ b/food_information_app_project/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.6
+  google_mobile_ads: ^0.11.0+4
+  plugin_platform_interface: ^2.0.1
 
 
 
